--- a/notebook/Complete-Python-3-Bootcamp-master/00-Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
+++ b/notebook/Complete-Python-3-Bootcamp-master/00-Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
@@ -545,21 +545,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "He said his name is Fred.\n"
+      "Hello Fred\n"
      ]
     }
    ],
    "source": [
     "name = 'Fred'\n",
     "\n",
-    "print(f\"He said his name is {name}.\")"
+    "print(f\"Hello {name}\")"
    ]
   },
   {
