--- a/notebook/Complete-Python-3-Bootcamp-master/03-Methods and Functions/07-args and kwargs.ipynb
+++ b/notebook/Complete-Python-3-Bootcamp-master/03-Methods and Functions/07-args and kwargs.ipynb
@@ -77,22 +77,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(40, 60, 20)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "6.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def myfunc(*args):\n",
+    "    print(args)\n",
     "    return sum(args)*.05\n",
     "\n",
     "myfunc(40,60,20)"
@@ -141,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
